--- a/app/views/aed-4-3/email-confirmation.html
+++ b/app/views/aed-4-3/email-confirmation.html
@@ -14,19 +14,19 @@
   </a>
 
   <h1 class="heading-large">
-    We're still looking for training providers to deliver your training
+    We've registered your interest in {{data['request']['standard']['name']}} apprenticeship training
   </h1>
 
   <p>
-    Training providers know you're interested in {{data['request']['standard']['name']}}, but none have told us that they're interested in delivering your training yet.
+    We'll share your interest in {{data['request']['standard']['name']}} with training providers for up to 12 weeks.
   </p>
 
   <p>
-    We'll continue to share your interest with training providers for another 10 weeks.
+    If a training provider tells us they’re interested in delivering your training, we’ll send you a notification email with their details. You can contact them to discuss your requirements.
   </p>
 
   <p>
-    If you're no longer interested in this training, you can <a href="#">stop receiving emails about this apprenticeship</a>. 
+    If you do not hear from us, it means that no training providers have expressed an interest in delivering your training.
   </p>
 
   <p>
