--- a/app/views/aed-4-3/email-provider-interest.html
+++ b/app/views/aed-4-3/email-provider-interest.html
@@ -52,7 +52,7 @@
         },
         value:
         {
-          text: data['request']['training-location']
+          text: "Coventry, West Midlands"
         }
       },
       {
