--- a/app/views/aed-provider-3-0/cohort-requirements.html
+++ b/app/views/aed-provider-3-0/cohort-requirements.html
@@ -43,8 +43,8 @@ html: 'This service is being used for research only.'
 		{% endset %}
 
 		{{ govukCheckboxes({
-			idPrefix: "waste",
-			name: "waste",
+			idPrefix: "training-location",
+			name: "request[training-location]",
 			fieldset:
 			{
 				legend:
