--- a/app/views/aed-4-3/email-provider-interest.html
+++ b/app/views/aed-4-3/email-provider-interest.html
@@ -52,7 +52,8 @@
         },
         value:
         {
-          text: "Coventry, West Midlands"
+          html: "<p>CV1 2RT<br>
+    At apprentice's workplace</p>"
         }
       },
       {
