test for heroku

--- a/app/views/aed-4-3/aed-training-needs.html
+++ b/app/views/aed-4-3/aed-training-needs.html
@@ -31,7 +31,7 @@ html: 'This service is being used for research only.'
 	<div class="govuk-grid-column-two-thirds">
 		<h1 class="govuk-heading-xl">
 			Tell us about your training needs
-			
+
 		</h1>
 
 		<!-- <h2 class="govuk-heading-l">
@@ -300,7 +300,7 @@ html: 'This service is being used for research only.'
 			<h2 class="govuk-heading-l govuk-!-margin-top-8">
 				Submit your training request
 			</h2>
-			<p>
+			<p class="govuk-body">
 				We'll share your interest in this training with relevant training providers to check if they can deliver the training.
 			</p>
 			<p>
