--- a/app/views/17-0/setup.html
+++ b/app/views/17-0/setup.html
@@ -59,22 +59,25 @@
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
-                    <a href="#">Employer - confirmation</a>
+                    <a href="/aed-4-3/email-confirmation">Employer - confirmation</a>
                 </li>
                 <li>
                     <a href="#">Provider - confirmation</a>
                 </li>
                 <li>
-                    <a href="#">Employer - 2 week</a>
+                    <a href="/aed-4-3/email-2-weeks">Employer - 2 week</a>
                 </li>
                 <li>
-                    <a href="#">Employer - 6 week</a>
+                    <a href="/aed-4-3/email-6-weeks">Employer - 6 week</a>
                 </li>
                 <li>
-                    <a href="#">Employer - 12 week</a>
+                    <a href="/aed-4-3/email-12-weeks">Employer - 12 week</a>
                 </li>
                 <li>
-                    <a href="#">Employer - provider interested</a>
+                    <a href="/aed-4-3/email-provider-interest">Employer - provider interested</a>
+                </li>
+                <li>
+                    <a href="/aed-4-3/email-found-match">Employer - found match</a>
                 </li>
             </ul>
         </div>
