--- a/app/views/aed-4-3/email-12-weeks.html
+++ b/app/views/aed-4-3/email-12-weeks.html
@@ -14,31 +14,31 @@
   </a>
 
   <h1 class="heading-large">
-    No training providers told us they were interested in delivering your training
+    We haven’t found a training provider for you yet
   </h1>
 
-  <h2 class="heading-medium govuk-!-margin-top-7">
-    Let us know if you're still searching
-  </h2>
-
   <p>
-    If you're still interested in finding a training provider for [[STANDARD]], you should <a href="#">let us know</a> so that we can share your interest with training providers for another 12 weeks.
+    If you're still interested in finding a training provider for {{data['request']['standard']['name']}}, let us know and we’ll share your interest with training providers for another 12 weeks.
   </p>
+  <p>
+    <a href="#" class="govuk-button">Keep sharing my interest</a>
+  </p>
+  
+  <p>
+    If we don't hear from you within 7 days we'll automatically stop sharing your interest.
+  </p>
+
 
   <h3 class="heading-small govuk-!-margin-top-7">
     Try searching for other courses
   </h3>
   <p>
-    You can use the <a href="#">Find apprenticeship training for your apprentice</a> service to look for other training courses.
+    You could try looking for a different course in the same sector, or consider expanding your location preferences.
   </p>
-
-  <h2 class="heading-medium govuk-!-margin-top-7">
-    If you've stopped searching
-  </h2>
   <p>
-    Otherwise, you can <a href="#">tell us to stop sending emails about this apprenticeship</a>. We'll automatically stop sharing your interest with training providers if we don't hear from you within 7 days. 
+    <a href="https://findapprenticeshiptraining.apprenticeships.education.gov.uk/" class="govuk-button">Search for training</a>
   </p>
-
+  
   <p>
     This is an automated message. Do not reply to this email.
   </p>
