--- a/app/views/aed-4-3/email-2-weeks.html
+++ b/app/views/aed-4-3/email-2-weeks.html
@@ -29,6 +29,16 @@
     If you're no longer interested in this training, you can <a href="#">stop receiving emails about this apprenticeship</a>. 
   </p>
 
+  <h2 class="heading-medium govuk-!-margin-top-7">
+    Try searching for other courses
+  </h2>
+  <p>
+    You could try looking for a different course in the same sector, or consider expanding your location preferences.
+  </p>
+  <p>
+    <a href="https://findapprenticeshiptraining.apprenticeships.education.gov.uk/" class="govuk-button">Search for training</a>
+  </p>
+
   <p>
     This is an automated message. Do not reply to this email.
   </p>
