--- a/app/views/aed-4-3/email-6-weeks.html
+++ b/app/views/aed-4-3/email-6-weeks.html
@@ -18,25 +18,29 @@
   </h1>
 
   <p>
-    Training providers know you're interested in this course, but none have told us that they're interested in delivering your training yet.
+    Training providers know you're interested in {{data['request']['standard']['name']}}, but none have told us that they're interested in delivering your training yet.
   </p>
 
   <p>
     We'll continue to share your interest with training providers for another 6 weeks.
   </p>
 
+  <p>
+    If you're no longer interested in this training, you can <a href="#">stop receiving emails about this apprenticeship</a>. 
+  </p>
+
   <h2 class="heading-medium govuk-!-margin-top-7">
     Try searching for other courses
   </h2>
   <p>
-    You can use the <a href="#">Find apprenticeship training for your apprentice</a> service to look for other training courses.
+    You could try looking for a different course in the same sector, or consider expanding your location preferences.
+  </p>
+  <p>
+    <a href="https://findapprenticeshiptraining.apprenticeships.education.gov.uk/" class="govuk-button">Search for training</a>
   </p>
 
-  <h3 class="heading-medium govuk-!-margin-top-7">
-    If you've stopped searching
-  </h3>
   <p>
-    Otherwise, you can <a href="#">tell us to stop sending emails about this apprenticeship</a>. We'll automatically stop sharing your interest with training providers if we don't hear from you within 7 days. 
+    This is an automated message. Do not reply to this email.
   </p>
 
   <p>
