--- a/app/views/aed-4-3/email-confirmation.html
+++ b/app/views/aed-4-3/email-confirmation.html
@@ -14,8 +14,66 @@
   </a>
 
   <h1 class="heading-large">
-    We've registered your interest in {{data['request']['standard']['name']}} apprenticeship training
+    We've registered your interest in an apprenticeship training course
   </h1>
+
+  <div class="govuk-inset-text">
+    
+    <dl class="govuk-summary-list govuk-!-margin-bottom-2">
+      
+        
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Apprenticeship training course
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{data['request']['standard']['name']}}
+            </dd>
+            
+          </div>
+        
+      
+        
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Training location
+            </dt>
+            <dd class="govuk-summary-list__value">
+              
+            </dd>
+            
+          </div>
+        
+      
+        
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Number of apprentices
+            </dt>
+            <dd class="govuk-summary-list__value">
+              
+            </dd>
+            
+          </div>
+        
+      
+        
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Start date
+            </dt>
+            <dd class="govuk-summary-list__value">
+              I&#39;m flexible
+            </dd>
+            
+          </div>
+        
+      
+    </dl>
+    
+      </div>
+
+  
 
   <p>
     We'll share your interest in {{data['request']['standard']['name']}} with training providers for up to 12 weeks.
@@ -41,5 +99,6 @@
     Apprenticeship service team<br>
     Education and Skills Funding Agency
   </p>
+ 
 </main>
 {% endblock %}
