--- a/app/views/aed-4-3/email-provider-interest.html
+++ b/app/views/aed-4-3/email-provider-interest.html
@@ -31,7 +31,7 @@
         {
           html: '<p>ABC Training<br class="govuk-!-margin-bottom-3">
             01234 567 890<br>
-          info@abc-training.edu.uk<br>
+          <a href="#">info@abc-training.edu.uk</a><br>
           <a href="#">abc-training.edu.uk</a></p>'
         }
       },
