--- a/app/views/aed-4-3/email-6-weeks.html
+++ b/app/views/aed-4-3/email-6-weeks.html
@@ -39,17 +39,11 @@
     <a href="https://findapprenticeshiptraining.apprenticeships.education.gov.uk/" class="govuk-button">Search for training</a>
   </p>
 
-  <p>
-    This is an automated message. Do not reply to this email.
-  </p>
-
-  <p>
-    From
-  </p>
-
-  <p>
-    Apprenticeship service team<br>
-    Education and Skills Funding Agency
-  </p>
+  <p>Kind regards</p>
+  <p>Apprenticeship service team</p>
+  <p>Education and Skills Funding Agency</p>
+  <p><a href="https://www.apprenticeships.gov.uk/employers" class="govuk-link govuk-link--no-visited-state">www.apprenticeships.gov.uk/employers</a></p>
+  <p>This is an automated message. Please don’t reply to this email.</p>
+  
 </main>
 {% endblock %}
