--- a/app/views/aed-4-3/email-confirmation.html
+++ b/app/views/aed-4-3/email-confirmation.html
@@ -39,7 +39,7 @@
               Training location
             </dt>
             <dd class="govuk-summary-list__value">
-              
+              Rugby, Warwickshire
             </dd>
             
           </div>
@@ -51,7 +51,7 @@
               Number of apprentices
             </dt>
             <dd class="govuk-summary-list__value">
-              
+              1
             </dd>
             
           </div>
@@ -87,18 +87,11 @@
     If you do not hear from us, it means that no training providers have expressed an interest in delivering your training.
   </p>
 
-  <p>
-    This is an automated message. Do not reply to this email.
-  </p>
-
-  <p>
-    From
-  </p>
-
-  <p>
-    Apprenticeship service team<br>
-    Education and Skills Funding Agency
-  </p>
+  <p>Kind regards</p>
+  <p>Apprenticeship service team</p>
+  <p>Education and Skills Funding Agency</p>
+  <p><a href="https://www.apprenticeships.gov.uk/employers" class="govuk-link govuk-link--no-visited-state">www.apprenticeships.gov.uk/employers</a></p>
+  <p>This is an automated message. Please don’t reply to this email.</p>
  
 </main>
 {% endblock %}
