--- a/app/views/aed-4-3/email-provider-interest.html
+++ b/app/views/aed-4-3/email-provider-interest.html
@@ -52,8 +52,7 @@
         },
         value:
         {
-          html: "<p>CV1 2RT<br>
-    At apprentice's workplace</p>"
+          html: "<p>At apprentice's workplace</p>"
         }
       },
       {
@@ -91,17 +90,12 @@
     If you're no longer interested in this training, you can <a href="#">stop receiving emails about this apprenticeship</a>.
   </p>
   
-  <p>
-    This is an automated message. Do not reply to this email.
-  </p>
+  <p>Kind regards</p>
+  <p>Apprenticeship service team</p>
+  <p>Education and Skills Funding Agency</p>
+  <p><a href="https://www.apprenticeships.gov.uk/employers" class="govuk-link govuk-link--no-visited-state">www.apprenticeships.gov.uk/employers</a></p>
+  <p>This is an automated message. Please don’t reply to this email.</p>
 
-  <p>
-    From
-  </p>
-
-  <p>
-    Apprenticeship service team<br>
-    Education and Skills Funding Agency
-  </p>
+  
 </main>
 {% endblock %}
