--- a/app/views/aed-4-3/email-found-match.html
+++ b/app/views/aed-4-3/email-found-match.html
@@ -44,19 +44,11 @@
     We wish you and your apprentice well with their apprenticeship training.
   </p>
 
-
-  <p>
-    This is an automated message. Do not reply to this email.
-  </p>
-
-  <p>
-    From
-  </p>
-
-  <p>
-    Apprenticeship service team<br>
-    Education and Skills Funding Agency
-  </p>
+  <p>Kind regards</p>
+  <p>Apprenticeship service team</p>
+  <p>Education and Skills Funding Agency</p>
+  <p><a href="https://www.apprenticeships.gov.uk/employers" class="govuk-link govuk-link--no-visited-state">www.apprenticeships.gov.uk/employers</a></p>
+  <p>This is an automated message. Please don’t reply to this email.</p>
   
 </main>
 {% endblock %}
