3-0 provider stds list adn service name

--- a/app/views/aed-provider-3-0/check-your-answers.html
+++ b/app/views/aed-provider-3-0/check-your-answers.html
@@ -1,6 +1,8 @@
 
 {% extends "layout.html" %}
 
+{% set serviceName = 'Meet employer demand for apprenticeships' %}
+
 {% block pageTitle %}
 GOV.UK Prototype Kit
 {% endblock %}
