--- a/app/views/aed-provider-3-0/cohort-requirements.html
+++ b/app/views/aed-provider-3-0/cohort-requirements.html
@@ -5,6 +5,8 @@
 GOV.UK Prototype Kit
 {% endblock %}
 
+{% set serviceName = 'Meet employer demand for apprenticeships' %}
+
 {% block beforeContent %}
 {{ govukPhaseBanner({
 	tag: {
