--- a/app/views/aed-provider-3-0/standard.html
+++ b/app/views/aed-provider-3-0/standard.html
@@ -5,7 +5,7 @@
 GOV.UK Prototype Kit
 {% endblock %}
 
-{% set serviceName = 'Apprenticeship training opportunities' %}
+{% set serviceName = 'Meet employer demand for apprenticeships' %}
 
 {% block beforeContent %}
 {{ govukPhaseBanner({
