--- a/app/views/aed-provider-3-0/check-your-answers.html
+++ b/app/views/aed-provider-3-0/check-your-answers.html
@@ -50,7 +50,7 @@ html: 'This service is being used for research only.'
 				},
 				value:
 				{
-					html: "<p>CV1 2RT<br>At apprentice's workplace</p>"
+					html: "<p>At apprentice's workplace</p>"
 				},
 				actions:
 				{
