aed-4-3 interest removed email

--- a/app/views/17-0/setup.html
+++ b/app/views/17-0/setup.html
@@ -79,6 +79,9 @@
                 <li>
                     <a href="/aed-4-3/email-found-match">Employer - found match</a>
                 </li>
+                <li>
+                    <a href="/aed-4-3/email-interest-removed">Employer - interest removed</a>
+                </li>
             </ul>
         </div>
     </div>
