aed-4-3 interest sent email

--- a/app/views/17-0/setup.html
+++ b/app/views/17-0/setup.html
@@ -82,6 +82,10 @@
                 <li>
                     <a href="/aed-4-3/email-interest-removed">Employer - interest removed</a>
                 </li>
+
+                <li>
+                    <a href="/aed-4-3/email-provider-interest-sent">Provider - interest sent</a>
+                </li>
             </ul>
         </div>
     </div>
